[package]
name = "tabletop_club_lobby_server"
version = "0.1.0"

authors = ["Benjamin 'drwhut' Beddows"]
description = "A WebRTC signalling server for Tabletop Club that allows players to connect peer-to-peer with the use of room codes."
repository = "https://github.com/drwhut/tabletop_club_lobby_server"
license = "MIT"

keywords = ["lobby", "server", "webrtc", "websocket"]
categories = ["command-line-utilities", "web-programming::websocket"]

edition = "2021"
rust-version = "1.63"

[dependencies]
fastrand = "2.0.1"
futures-util = { version = "0.3", default-features = false }
rust-ini = "0.21.0"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "ttc-lobby"
path = "src/main.rs"
