[package]
name = "tabletop_club_lobby_server"
version = "0.1.0"

authors = ["Benjamin 'drwhut' Beddows"]
description = "A WebRTC signalling server for Tabletop Club that allows players to connect peer-to-peer with the use of room codes."
repository = "https://github.com/drwhut/tabletop_club_lobby_server"
license = "MIT"

keywords = ["lobby", "server", "webrtc", "websocket"]
categories = ["command-line-utilities", "web-programming::websocket"]

edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
fastrand = "2.0.1"
futures-util = { version = "0.3", default-features = false }
nohash-hasher = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
toml_edit = { version = "0.22.7", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "ttc-lobby"
path = "src/main.rs"
