[package]
name = "tabletop_club_lobby_server"
version = "0.1.0"

authors = ["Benjamin 'drwhut' Beddows"]
description = "A WebRTC signalling server for Tabletop Club that allows players to connect peer-to-peer with the use of room codes."
repository = "https://github.com/drwhut/tabletop_club_lobby_server"
license = "MIT"

keywords = ["lobby", "server", "webrtc", "websocket"]
categories = ["command-line-utilities", "web-programming::websocket"]

edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive"] }
fastrand = "2"
futures-util = { version = "0.3", default-features = false }
nohash-hasher = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ttc-lobby"
path = "src/main.rs"
